# alert-history-service

./: !notes.txt  .gitignore  .gosec.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING-GO.md  CONTRIBUTING.md  DEPRECATION.md  DOCKER_COMPOSE.md  Dockerfile  ENRICHMENT-API-COMPLETE.md  FINAL_STATUS_2025-10-09.md  INTEGRATION_SUMMARY_TN-062.md  MERGE_SUMMARY_TN-154.md  MIGRATION.md  Makefile.docker  Makefile.templates  PHASE12_COMPREHENSIVE_AUDIT_2025-11-29.md  PHASE12_STATUS_FIX_2025-11-29.md  PHASE13_AUDIT_SUMMARY_RU_2025-11-30.md  PHASE13_BLOCKERS_RESOLVED_2025-11-30.md  PHASE13_COMPLETION_SUMMARY.md  PHASE13_COMPREHENSIVE_AUDIT_2025-11-30.md  PHASE13_CRITICAL_FIX_REQUIRED.md  PHASE13_FINAL_STATUS_2025-11-30.md  PHASE5_150PCT_FINAL_SUMMARY.md  PHASE5_150PCT_ROADMAP.md  PHASE5_COMPLETE.md  PHASE5_COMPREHENSIVE_CERTIFICATION_150PCT.md  PHASE5_ENTERPRISE_CERTIFICATION.md  PHASE5_FINAL_SUMMARY.md  PHASE5_FIXES_SUMMARY_2025-11-14.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_INTEGRATION_COMPLETE.md  PHASE_11_AUDIT_SUMMARY_RU.md  PHASE_11_COMPLETE_FINAL_2025-11-26.md  PHASE_11_COMPREHENSIVE_AUDIT_2025-11-26.md  PHASE_11_FINAL_REPORT_2025-11-26.md  PHASE_11_FIXES_APPLIED_2025-11-26.md  PHASE_11_MISSION_ACCOMPLISHED_2025-11-26.md  (+186 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: go.yml  integration-tests.yml  security-scan.yml
api/: openapi-enrichment.yaml  openapi.yaml
cmd/configvalidator/: main.go
cmd/template-validator/: main.go
config/: grouping.yaml  inhibition.yaml
docs/: API.md  API_COMPATIBILITY.md  DASHBOARD.md  DEPLOYMENT.md  ENRICHMENT_API.md  LLM_FILTERING.md  PHASE_0_FOUNDATION_README.md  QUICK_START.md  SILENCE_UI_DEPLOYMENT_GUIDE.md  go-for-python-devs.md  openapi-enrichment.yaml  openapi-inhibition.yaml  openapi-silence.yaml
docs/adr/: 001-gin-vs-fiber-framework.md  002-pgx-vs-gorm-driver.md  003-architecture-decisions.md  README.md  TN-061-001-middleware-stack-design.md  TN-061-002-rate-limiting-strategy.md  TN-061-003-error-handling-approach.md
docs/adrs/: 001-intelligent-proxy-architecture.md
docs/api/: TN-150-CONFIG-API.md  TN-150-OPENAPI.yaml  metrics-endpoint.md  openapi.yaml  template-api.yaml
docs/architecture/: ARCHITECTURE.md
docs/deployment/: DEPLOYMENT_GUIDE.md  kubernetes.md
docs/guides/: integration-guide.md  metrics-integration.md  migration-guide.md  quickstart.md
docs/operations/: RUNBOOK.md  TROUBLESHOOTING.md
docs/operators/: HOT_RELOAD_GUIDE.md
docs/publishing/: metrics-only-mode.md  mode-endpoint-openapi.yaml  mode-endpoint.md
docs/runbooks/: high-error-rate.md  metrics-endpoint-troubleshooting.md
docs/security/: TN-150-SECURITY.md
e2e/: .gitignore  README.md  package.json  playwright.config.ts
e2e/tests/: silence-dashboard.spec.ts
examples/configvalidator/: basic_usage.go
examples/k8s/: pagerduty-secret-example.yaml  rootly-secret-example.yaml
examples/template-validator/: basic_usage.go  batch_validation.go  ci_integration.go
go-app/: .air.toml  .dockerignore  .golangci.yml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  Makefile.migrations  README.md  config.yaml  cpu.prof  demo_migration_system.go  docker-bake.hcl  docker-compose.yml  docker-test.sh  go.mod  go.sum  mem.prof  migrations_test.go  test_migration_system.go
go-app/benchmark/: analyze_db_results.py  analyze_results.py  go.mod  go.sum  run_benchmarks.sh  run_db_benchmarks.sh
go-app/docs/: API_REFERENCE.md  ERROR_CODES.md  EXAMPLES.md  USER_GUIDE.md
go-app/examples/: README.md
go-app/migrations/: 20250911094416_initial_schema.sql  20251009180500_add_filter_indexes.sql  20251104120000_create_silences_table.sql  20251112150000_create_publishing_dlq.sql  20251116160000_tn63_history_performance_indexes.sql  20251122000000_config_management.sql  20251125000001_create_templates_tables.sql
grafana/dashboards/: README.md  publishing-queue-tn056.json  webhook-dashboard.json
helm/alert-history/: CHANGELOG.md  Chart.yaml  DEPLOYMENT.md  README.md  values-dev.yaml  values-production.yaml  values.yaml
helm/alert-history-go/: Chart.yaml  values.yaml
k6/: README.md  publishing_steady_state.js  redis-connection-pool.js  webhook-soak-test.js  webhook-spike-test.js  webhook-steady-state.js  webhook-stress-test.js
k8s/: silence-ui-configmap.yaml  silence-ui-deployment.yaml  silence-ui-service.yaml
k8s/publishing/: RBAC_GUIDE.md  README.md  SECURITY_COMPLIANCE.md  rbac.yaml  role.yaml  rolebinding.yaml  secret-example.yaml  serviceaccount.yaml
legacy/: README.md
legacy/active/: MIGRATION_STATUS.md  README.md
legacy/deprecated/: README.md  (+1 more)
scripts/: check-integration-status.sh  deploy-silence-ui.sh  disable-health-monitoring.sh  enable-health-monitoring.sh  profile-webhook.sh  reload-config.sh  test-redis-failover.sh  test-redis-helm-templates.sh  test-redis-persistence.sh
tasks/: PHASE-4-ACTION-PLAN-2025-11-03.md  PHASE-4-AUDIT-REPORT-2025-10-10.md  PHASE-4-COMPREHENSIVE-AUDIT-2025-11-03.md  PHASE-4-EXECUTIVE-SUMMARY-2025-11-03.md  PHASE_5_AUDIT_EXECUTIVE_SUMMARY_2025-11-07.md  PHASE_5_COMPREHENSIVE_AUDIT_2025-11-07.md  PHASE_A_AUDIT_EXECUTIVE_SUMMARY_2025-11-07.md  PHASE_A_IMPROVEMENTS_PLAN.md  PHASE_A_IMPROVEMENTS_SUMMARY.md  PHASE_A_INDEPENDENT_AUDIT_2025-11-07.md  PHASE_A_TEST_FIXES_SUMMARY.md  TN-040-to-045-CODEBASE_ANALYSIS.md  TN-040-to-045-COMPLETION_REPORT.md  TN-040-to-045-DOCUMENTATION_ANALYSIS.md
templates/: dashboard.html  dashboard_grouped.html  html5_dashboard.html  unified_dashboard.html
tests/: test-deployment.sh  test_12factor.py  test_alert_classifier.py  test_filter_publisher.py  test_health_checks.py  test_load_balancing.py  test_migration_basic.py  test_phase3_simplified.py  test_publishing_api.py  test_redis_basic.py  test_secrets_management.py  test_stateless_design.py  test_t1_2_database_migration.py  test_t1_3_redis_integration.py  test_t1_4_stateless_design.py  test_t6_dashboard.py  test_t7_1_code_quality.py  test_t7_2_integration.py  test_t7_3_horizontal_scaling.py  test_t7_4_12factor_compliance.py  test_target_discovery.py  test_webhook_llm_integration.py  test_webhook_proxy.py
(+2026 files in other folders)
